# powernode

./: .gitignore  README.md  main.py  pyproject.toml  todo.md
backend/: main.py  pyproject.toml
backend/data/: log.db
backend/data/test_read_csv/filter_holidays/: filter_holidays.parquet
backend/data/test_read_csv/join_sales_features/: join_sales_features.parquet
backend/src/: adhoc.py  api.py  log.py  node.py  workflow.py  workflow_runner.py  workflowtest.py
data/test_read_csv/join_sales_features/: join_sales_features.parquet
data/test_read_csv/read_features/: read_features.parquet
data/test_read_csv/read_sales/: read_sales.parquet
data/test_read_csv/read_stores/: read_stores.parquet
frontend/: index.html  main.js  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/pages/: WorkflowDetail.jsx  Workflows.jsx
src/: api.py  main.py  node.py  workflow.py  workflow_runner.py
