[project]
name = "powernode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "requests>=2.32.3",
    "ruff>=0.11.11",
    "uvicorn>=0.34.2",
]
